<resources>
    <string name="app_name">Pepega Cafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_started">Get Started</string>
    <string name="title_favorite">Favorite</string>
    <string name="plug_title">No orders yet</string>
    <string name="plug_text_below">Click the button below to start ordering</string>
    <string name="plug_button">Start ordering</string>
    <string name="title_recent_orders">Recent orders</string>
    <string name="title_profile">Profile</string>
    <string name="get_started_meal">get_started_meal</string>
    <string name="get_started_background">get_started_background</string>
    <string name="delicious_meals">Delicious meals</string>
    <string name="shashlik">shashlik</string>
</resources>