<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PlugFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/plug_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plug_title"
        android:textSize="28sp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/plug_text_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plug_text_below"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plug_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/plug_text_below"
        app:layout_constraintRight_toRightOf="@id/plug_text_below"
        app:layout_constraintLeft_toLeftOf="@id/plug_text_below"
        android:background="@drawable/custom_button"
        android:textSize="16sp"
        android:text="@string/plug_button"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>